# advanced_cpp

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
matrix_calculator/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h
matrix_calculator/include/: matrix.h
matrix_calculator/src/: access.cpp  arithmetics.cpp  constructors.cpp  main.cpp  matrix.cpp  slice.cpp  special.cpp
matrix_calculator/tests/: test.cpp
stl_container/: CMakeLists.txt
stl_container/include/: set.h  stl_set.h
stl_container/src/: access.cpp  constructors.cpp  impl.cpp  iterator.cpp  managment.cpp  rb_tree.cpp
stl_container/tests/: test.cpp
